# Bypass-Subtitles

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
backend/: .env.example  config.py  main.py  pyproject.toml  run.sh
backend/services/: cloud_transcriber.py  transcriber.py  transcriber_factory.py  translator.py
docs/: USE_CASES.md
extension/: background.js  content.js  manifest.json
extension/popup/: popup.html  popup.js
extension/styles/: subtitle.css
