[project]
name = "bypass-subtitles-backend"
version = "0.1.0"
description = "Backend server for Bypass Subtitles Chrome Extension"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=14.0",
    "faster-whisper>=1.0.0",
    "python-multipart>=0.0.12",
    "groq>=0.4.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "nvidia-cublas-cu12>=12.9.1.4",
    "nvidia-cudnn-cu12>=9.17.1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
